Quorum3/Library/Tests/Templating/Pass/GenericPass.quorum
class GenericPass<Type, Value> is GenericParentA<Type>, GenericParentB, GenericParentC<Value>
    
end