Quorum3/Library/Tests/Templating/Fail/D_8.quorum
class D<Type, Type2> is B<Type>, C<Type2>

end